# dynabench

./: .flake8  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  CONTRIBUTING.md  Dockerfile  README.md  detect_aws_credentials.py  docker-compose.yaml  manual_deployment_dev.yml  new_README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: .env.example  .gitignore  bottle.py  install.py  pyproject.toml  requirements.txt  server.py
api/builder/: build_server_decen.py  test.py
api/builder/tests/: test_flores.py
api/builder/utils/: __init__.py  deployer.py  helpers.py  logging.py
api/common/: config.py  cors.py
api/controllers/: auth.py  datasets.py  examples.py  models.py  tasks.py  users.py
api/cron/: prune_models.py  takedown_unpublished_models.py
api/devops/: ecs-task-definition.json
api/evaluation/: eval_config.py  eval_server.py  eval_server_decen.py  requirements.txt
api/evaluation/datasets/: __init__.py  common.py
api/evaluation/metrics/: metric_getters.py  metrics.py  metrics_dicts.py  train_file_metrics.py  vqa_accuracy.py
api/evaluation/scripts/: augly_perturbation.py  cleanup_failed_models.py  fix_bleu.py  perturb.py  request_evaluation.py  util.py
api/evaluation/tests/: conftest.py  test_computer.py  test_datasets.py  test_flores.py
api/evaluation/utils/: __init__.py  (+8 more)
api/migrations/: 20220504_01_WOGoS-add-context-parameter-task.py  20220703_01_WOGoS-add-column-for-light-models.py  20220703_01_WOGoS-add-new-model-in-the-loop-lambda-final copy.py  20220703_01_WOGoS-add-new-model-in-the-loop-lambda-final.py  20220703_01_WOGoS-add-new-model-in-the-loop-lambda.py
api/models/: context.py  dataset.py  example.py  model.py  round_user_example_info.py  score.py  task.py
api/templates/: model_eval_failed.txt
api/tools/: local_export.py  utf8ize.py
backend/: .env.example  docker-compose-queue.yaml  pyproject.toml  requirements.txt
backend/app/: main.py  main_decentralized.py
backend/dockerfiles/: Dockerfile  Dockerfile.aws
backend/dynalab/: readme.md
backend/worker/: Dockerfile  celery_entrypoint.sh  config.py  requirements.txt  tasks.py
(+728 files in other folders)
