[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "augly>=1.0.0",
    "boto3>=1.40.73",
    "bottle>=0.13.4",
    "cheroot>=11.1.2",
    "cryptography>=46.0.3",
    "dynalab",
    "legacy-cgi>=2.6.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "sacrebleu>=2.5.1",
    "sentencepiece>=0.2.1",
    "six>=1.17.0",
    "spacy>=3.8.9",
    "sqlalchemy>=2.0.44",
    "textflint>=0.0.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "ujson>=5.11.0",
    "werkzeug>=3.1.3",
    "yoyo-migrations>=9.0.0",
]

[tool.uv.sources]
dynalab = { git = "https://github.com/facebookresearch/dynalab.git" }
