[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aleph-alpha-client>=11.4.0",
    "anthropic>=0.72.1",
    "boto3>=1.40.73",
    "celery>=5.5.3",
    "cloudwatch>=1.2.1",
    "cohere>=5.20.0",
    "docker>=7.1.0",
    "fastapi>=0.121.2",
    "google-generativeai>=0.8.5",
    "greenlet>=3.2.4",
    "gunicorn>=23.0.0",
    "jsonlines>=4.0.0",
    "langchain>=1.0.5",
    "msgpack-python>=0.5.6",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openai>=2.8.0",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.0.0",
    "pre-commit>=4.4.0",
    "pydantic[email]>=2.12.4",
    "pymysql[rsa]>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "redis>=7.0.1",
    "replicate>=1.0.7",
    "requests>=2.32.5",
    "sacrebleu>=2.5.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "sqlalchemy==1.4.25",
    "sse-starlette>=3.0.3",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "ujson>=5.11.0",
    "uvicorn>=0.38.0",
    "werkzeug>=3.1.3",
]
